# Cinder-s-Webscraper

./: .gitignore  AGENTS.md  CHANGELOG.md  GUI_Launch_Process.md  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  src
.github/workflows/: python.yml
cinder_web_scraper/: __main__.py  main.py
cinder_web_scraper/gui/: __init__.py  main_window.py  scheduler_dialog.py  settings_panel.py  website_manager.py
cinder_web_scraper/scheduling/: __init__.py  schedule_manager.py  task_scheduler.py
cinder_web_scraper/scraping/: content_extractor.py  output_manager.py  scraper_engine.py
cinder_web_scraper/utils/: __init__.py  config_manager.py  file_handler.py  repo_updater.py  update_repo.py  updater.py
data/: websites.json
docs/: DEVELOPER_GUIDE.md  gui_launch.md
src/: __init__.py  main.py
src/gui/: __init__.py  main_window.py  scheduler_dialog.py  settings_panel.py  website_manager.py
src/scheduling/: __init__.py  schedule_manager.py  task_scheduler.py
src/scraping/: __init__.py  content_extractor.py  output_manager.py  scraper_engine.py
src/utils/: __init__.py  config_manager.py  file_handler.py  logger.py
tests/: __init__.py  conftest.py  dummy_module.py  test_cli_arguments.py  test_config_manager.py  test_content_extractor.py  test_file_and_logging_utils.py  test_file_handler.py  test_gui.py  test_gui_components.py  test_gui_logic.py  test_logger.py  test_new_modules.py  test_output_manager.py  test_repo_updater.py  test_schedule_manager.py  test_schedule_manager_run_pending.py  test_scheduler_dialog.py  test_scraper_engine.py  test_scraping_components.py  test_settings_panel.py  test_task_scheduler.py  test_update_button.py  test_updater.py  test_website_manager.py
