[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cinder-webscraper"
version = "0.1.0"
description = "A GUI-based web scraper application."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "schedule",
]

[tool.setuptools.packages.find]
where = ["src"]

